# n-link

./: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
desktop/: .eslintrc.js  README.md  package.json  postcss.config.js  tailwind.config.js  vue.config.js
desktop/src/: App.vue  main.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cli.rs  cmd.rs  main.rs  promise.rs
desktop/src/assets/: tailwind.css
desktop/src/components/: FileBrowser.vue  FileView.vue  devices.ts
desktop/src/views/: Home.vue
n-link-core/: .eslintrc.js  package.json  postcss.config.js  shims-vue.d.ts  tailwind.config.js  tsconfig.json
n-link-core/components/: CalcInfo.vue  DeviceQueue.vue  DeviceSelect.vue  FileBrowser.vue  FileData.vue  FileIcon.vue  FileView.vue  devices.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: NOTICE.txt  cli.rs  cmd.rs  main.rs
src/components/: CalcInfo.vue  DeviceQueue.vue  DeviceSelect.vue  FileBrowser.vue  FileData.vue  FileIcon.vue  HelloWorld.vue  devices.ts
src/views/: Home.vue
web/: .eslintrc.js  README.md  nuxt.config.js  package.json  tsconfig.json
web/components/: ErrorMessage.vue  devices.ts  impl.ts  usb.worker.ts
web/layouts/: default.vue
web/pages/: index.vue
web/plugins/: index.ts
web/types/vue-final-modal/: index.d.ts
web/web-libusb/: .editorconfig  Cargo.toml
web/web-libusb/libnspire-sys/: Cargo.toml  README.md  build.rs
web/web-libusb/libnspire-sys/libnspire/: AUTHORS  README
web/web-libusb/libnspire-sys/libnspire/src/: cx2.cpp  cx2.h  data.c  data.h  endianconv.h  error.c  error.h  handle.h  init.c  init.h  packet.c  packet.h  service.c  service.h  usb.c  usb.h
web/web-libusb/libnspire-sys/libnspire/src/api/: devinfo.h  dir.h  error.h  file.h  handle.h  key.h  nspire.h  os.h  screenshot.h
web/web-libusb/libnspire-sys/libnspire/src/services/: devinfo.c  devinfo.h  dir.c  dir.h  file.c  file.h  key.c  key.h  os.c  os.h  screenshot.c  screenshot.h
web/web-libusb/libnspire-sys/src/: bindings.rs  lib.rs
web/web-libusb/wasm-libc/: Cargo.toml
web/web-libusb/wasm-libc/src/: lib.rs
web/web-libusb/web-libnspire/: Cargo.toml
web/web-libusb/web-libnspire/pkg/: README.md  package.json  web_libnspire.d.ts  web_libnspire.js  web_libnspire_bg.js  web_libnspire_bg.wasm  web_libnspire_bg.wasm.d.ts
web/web-libusb/web-libnspire/src/: lib.rs  printf.rs
web/web-libusb/web-libusb/: Cargo.toml  LICENSE_MIT  build.rs
web/web-libusb/web-libusb/include/: algorithm  cstdint  cstdio  cstdlib  cstring  libusb.h  stdint.h  stdio.h  stdlib.h  string.h
web/web-libusb/web-libusb/include/arpa/: inet.h
web/web-libusb/web-libusb/include/sys/: time.h
web/web-libusb/web-libusb/src/: alloc.rs  constants.rs  lib.rs  misc.rs  msgs.rs  structs.rs
