[package]
name = "web-libnspire"
description = "libnspire with WASM"
repository = "https://github.com/lights0123/web-libusb"
license = "GPL-3.0"
version = "0.1.3"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ["DedicatedWorkerGlobalScope"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1.3"
rmp-serde = "0.14.4"
libusb1-sys = "0.4.2"
libnspire-sys = "0.3.2"
libnspire = "0.2.3"
rusb = "0.6.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
