[package]
name = "libusb1-sys"
version = "0.4.2"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
build = "build.rs"
links = "usb-1.0" # Required for metadata passing to work

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ["DedicatedWorkerGlobalScope", "console"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1.3"
rmp-serde = "0.14.4"
libc = "0.2.77"
